<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userprofile.UserProfile">

    <FrameLayout
        android:id="@+id/userProfile_top_frame"
        android:layout_width="match_parent"
        android:layout_height="211dp"
        android:background="@color/baseBlack">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/userProfile_tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            app:tabTextColor="@color/White">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/userProfile_tabItem_Listings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Listings" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/userProfile_tabItem_Reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reviews" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/userProfile_tabItem_AboutMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="About Me" />
        </com.google.android.material.tabs.TabLayout>


    </FrameLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_userProfilePageImage"
        android:layout_width="180dp"
        android:layout_height="140dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/default_picture" />


    <TextView
        android:text="TestingAbc123"
        android:id="@+id/tv_profilePageUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:textColor="@color/baseGreen"
        android:textSize="16sp"
        android:layout_toEndOf="@+id/iv_userProfilePageImage"
        android:layout_toRightOf="@+id/iv_userProfilePageImage" />
    <TextView
        android:text="TestingAbc123"
        android:id="@+id/tv_profilePageAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:textColor="@color/White"
        android:layout_toRightOf="@+id/iv_userProfilePageImage"
        android:layout_below="@+id/tv_profilePageUsername"
        android:textSize="14sp" />

    <TextView
        android:text="TestingAbc123"
        android:id="@+id/tv_profilePageGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_below="@+id/tv_profilePageAge"
        android:layout_toRightOf="@+id/iv_userProfilePageImage"
        android:textColor="@color/White"
        android:textSize="14sp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/userProfile_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/userProfile_top_frame" />
</RelativeLayout>
